crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__popup-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┌───────────────────────────────────────────┐|
|│ /model <name>            switch the model │|
|│ /mode <mode>      set the permission mode │|
|│ /stop                  interrupt the turn │|
|│ /switch        account, provider or model │|
|└───────────────────────────────────────────┘|

 0   0..45  fg=DarkGray bg=Reset
 1   0..1   fg=DarkGray bg=Reset
 1   1..27  fg=Reset bg=Reset
 1  27..43  fg=DarkGray bg=Reset
 1  43..44  fg=Reset bg=Reset
 1  44..45  fg=DarkGray bg=Reset
 2   0..1   fg=DarkGray bg=Reset
 2   1..44  fg=Black bg=Cyan
 2  44..45  fg=DarkGray bg=Reset
 3   0..1   fg=DarkGray bg=Reset
 3   1..25  fg=Reset bg=Reset
 3  25..43  fg=DarkGray bg=Reset
 3  43..44  fg=Reset bg=Reset
 3  44..45  fg=DarkGray bg=Reset
 4   0..1   fg=DarkGray bg=Reset
 4   1..17  fg=Reset bg=Reset
 4  17..43  fg=DarkGray bg=Reset
 4  43..44  fg=Reset bg=Reset
 4  44..45  fg=DarkGray bg=Reset
 5   0..45  fg=DarkGray bg=Reset
