crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__prompt-100-dark-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┃ write the docs page too, and link it from @README.md                                              |
|┃                                                                                                   |
|┃ claude-main · opus · ask                                                                          |
|┃                                                                                                   |
|                                                                                                    |
|┃ Write a prompt…                                                                                   |
|┃                                                                                                   |
|┃ claude-main · opus · ask                                                                          |
|┃                                                                                                   |
|                                                                                                    |
|                                                                                                    |

 0   0..1   fg=#7aa2f7 bg=#181a20
 0   1..2   fg=#e6e6e6 bg=#181a20
 0   2..3   fg=#e6e6e6 bg=#181a20 REVERSED
 0   3..100 fg=#e6e6e6 bg=#181a20
 1   0..1   fg=#7aa2f7 bg=#181a20
 1   1..100 fg=#e6e6e6 bg=#181a20
 2   0..1   fg=#7aa2f7 bg=#181a20
 2   1..13  fg=#e6e6e6 bg=#181a20
 2  13..26  fg=#7f8492 bg=#181a20
 2  26..100 fg=#e6e6e6 bg=#181a20
 3   0..1   fg=#7aa2f7 bg=#181a20
 3   1..100 fg=#e6e6e6 bg=#181a20
 4   0..100 fg=#e6e6e6 bg=#111216
 5   0..1   fg=#3b3f4a bg=#181a20
 5   1..2   fg=#e6e6e6 bg=#181a20
 5   2..99  fg=#7f8492 bg=#181a20
 5  99..100 fg=#e6e6e6 bg=#181a20
 6   0..1   fg=#3b3f4a bg=#181a20
 6   1..100 fg=#e6e6e6 bg=#181a20
 7   0..1   fg=#3b3f4a bg=#181a20
 7   1..13  fg=#e6e6e6 bg=#181a20
 7  13..26  fg=#7f8492 bg=#181a20
 7  26..100 fg=#e6e6e6 bg=#181a20
 8   0..1   fg=#3b3f4a bg=#181a20
 8   1..100 fg=#e6e6e6 bg=#181a20
 9   0..100 fg=#e6e6e6 bg=#111216
10   0..100 fg=#e6e6e6 bg=#111216
